--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -5,6 +9,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: rgb(248 113 113);
+}
+::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+	background-color: #c7e9d1;
+	border: 2px solid #f8f3f3;
+}
+
 
 a {
   color: inherit;
@@ -20,7 +41,8 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 }
